# asr

./: Cargo.toml  README.md
data/: phonemes.toml
pyscripts/: phoneme_file.py
src/: audio.rs  bound_float.rs  bounded_float.rs  cli.rs  language_components.rs  main.rs  models.rs  multithreading.rs  operation.rs  parsing.rs  processing_api.rs
src/cli/: args.rs
src/models/: model.rs  model_frontend.rs  processing_api.rs
src/multithreading/: scoped_threadpool.rs  threadpool.rs
src/operation/: file_input.rs  mic_input.rs  mic_stream_util.rs  mic_test.rs
src/parsing/: toml.rs
